--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>ReactJS</title>
+    <style>
+        td {
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <div id="app"></div>
