--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>ReactJS</title>
     <style>
         td {
-            border: 1px solid black;
+            border: 1px solid aqua;
+            background-color: azure;
         }
     </style>
 </head>
